--- a/client/index.html
+++ b/client/index.html
@@ -37,11 +37,13 @@
             <router-view
               @register-user="registerUser"
               @log-user="logUser"
-              @add-article="addRun"
-              @update-article="updateRun"
+              @add-article="addarticle"
+              @update-article="updatearticle"
               @delete-user="deleteUser"
               @delete-article="deleteArticle"
               @edit-user="editUser"
+              @addtobasket="addtobasket"
+              @delltobasket="delltobasket"
             ></router-view>
           </main>
         </div>
