--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!-- programme par Enzo FILANGI et Adrien GIRARD du Groupe A-->
+<!-- programme par  Adrien GIRARD  et Yan Manchecourtedu Groupe IT1-->
 
 <!doctype>
 <html lang="fr">
