--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
         <div id="app">
           <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <h1 class="navbar-brand" ><router-link to='/' style="text-decoration: none; color: black"> Speed.article</router-link> </h1>
+                <h1 class="navbar-brand" ><router-link to='/' style="text-decoration: none; color: black"> GameShop</router-link> </h1>
                 <router-link to='/create' v-if="user.admin || user.revendeur" class="nav-item nav-link">Ajouter un article</router-link>
                 <ul class="navbar-nav ml-auto">
                     <li><router-link to='/register' class="nav-item nav-link" v-if="!user.id && done">S'enregistrer</router-link></li>
